@startuml Catalog_ER
title ER — Catalog Service (MySQL)

entity "categories" as CAT {
  + id
  --
  name (unique)
  parent_category_id (nullable)
}

entity "products" as P {
  + id
  --
  name
  sku (unique)
  category_id
  price
  cost
  status
  created_at
  updated_at
}

CAT ||--o{ CAT : "parent : children"
CAT ||--o{ P   : "1 : N"

@enduml
